# spec_coding

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  my_test.txt  pyproject.toml  requirements.txt
projects/ai_video_management/: Makefile  README.md  pyproject.toml  requirements.txt
projects/ai_video_management/.codegraph/: daemon.pid
projects/ai_video_management/apps/api/: app_factory.py  asgi.py  container.py  main.py  routes.py  uvicorn_force_exit.py
projects/ai_video_management/apps/cli/: __init__.py  novel_download.py  novel_split.py
projects/ai_video_management/apps/ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
projects/ai_video_management/backend/: main.py  requirements.txt
projects/ai_video_management/backend/libs/: actor_pool.py  api.py  asgi.py  casting.py  downloads_importer.py  exposed_tree.py  file_writer.py  media_archiver.py  media_renamer.py  repo_root.py  safe_resolve.py  tree_walker.py
projects/ai_video_management/backend/tests/: conftest.py  test_api_security_three_shapes.py  test_boot_smoke.py  test_sub_type_lookup.py  test_tree_walker_consumer_walk.py
projects/ai_video_management/frontend/src/: App.tsx  api.ts  styles.css  types.ts
projects/ai_video_management/frontend/test/: shotPairing.test.ts
projects/ai_video_management/libs/common/: drama_layout.py  env_loader.py  exposed_tree.py  origin.py  render_select.py  safe_resolve.py  sub_type_lookup.py
projects/ai_video_management/libs/infrastructure/: actor_pool__writer.py  casting__writer.py  downloads__importer.py  file__reader.py  file__writer.py  frame__extractor.py  media__archiver.py  media__renamer.py  tree__reader.py
projects/ai_video_management/tests/: conftest.py  test_actor_prompt_only_roundtrip.py  test_api_security_three_shapes.py  test_bgm_library.py  test_boot_smoke.py  test_downloads_import_bgms.py  test_downloads_import_performances.py  test_downloads_import_shots.py  test_drama_layout.py  test_drama_takes_and_episodes.py  test_episode_bgm.py  test_episode_concat.py  test_episode_whole_subtitle_burn.py  test_frame_last_frame.py  test_intro_card_burn.py  test_media_purge_deleted.py  test_perf_score.py  test_production_export.py  test_render_select.py  test_scene_plate_extractor.py  test_seam_concat_segment_ok.py  test_shot_regen.py  test_sub_type_lookup.py  test_subtitle_batch.py  test_subtitle_burn.py  test_tree_display_name_zh.py  test_tree_system_folder_labels.py  test_tree_walker_consumer_walk.py  test_voice_no_outbound_http.py
projects/char3d_gen/: Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_man.sh
projects/char3d_gen/libs/: generator.py  validator.py
projects/ralph_loop/: README.md  __main__.py  main.py  pyproject.toml  requirements.txt
projects/ralph_loop/libs/: checks.py  config.py  criterion.py  loop.py  runner.py  spec.py  state.py  task.py
projects/ralph_loop/specs/example_project/: config.yml  spec.yml
projects/spec_driven/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
projects/spec_driven/apps/api/: container.py  main.py  routes.py
projects/spec_driven/apps/ui/: package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/spec_driven/backend/: main.py  pyproject.toml  requirements.txt
projects/spec_driven/backend/libs/: api.py  api_security.py  exposed_tree.py  file_reader.py  file_writer.py  project_deleter.py  promotions.py  regen_prompt.py  repo_root.py  safe_resolve.py  stages.py  tree_walker.py
projects/spec_driven/backend/tests/: conftest.py
projects/spec_driven/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/spec_driven/frontend/e2e/: dogfood.spec.ts
projects/spec_driven/frontend/src/: App.tsx  api.ts  autonomousMode.ts  localStorage.ts  main.tsx  promotions.ts  routes.tsx  styles.css  types.ts
projects/spec_driven/frontend/test/: QaErrorBoundary.test.tsx  Sidebar.test.tsx  autonomousMode.test.ts  linkResolver.test.ts  qaParser.test.ts  setup.ts
projects/spec_driven/libs/application/: add_promotion__command.py  build_regen_prompt__query.py  create_prompt_lab_file__command.py  delete_project__cdto.py  delete_project__command.py  delete_prompt_lab_file__command.py  file__mapper.py  get_stages__query.py  get_tree__query.py  list_prompt_lab__query.py  promotion__cdto.py  promotion__mapper.py  prompt_lab__cdto.py  prompt_lab__qdto.py  read_file__qdto.py  read_file__query.py  regen_prompt__qdto.py  remove_promotion__command.py  tree__qdto.py  write_file__cdto.py  write_file__command.py
projects/spec_driven/libs/common/: exposed_tree.py  repo_root.py  safe_resolve.py
projects/spec_driven/tests/: conftest.py
(+13949 files in other folders)
