[project]
name = "ai_video_management"
version = "0.2.0"
description = "ai_video_management webapp (localhost-only viewer/editor for ai_videos/ artifacts)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "starlette>=0.36",
    "pytest>=8.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "cssselect>=1.2",
    "pillow>=10.0",
    "imageio-ffmpeg>=0.5",
    "dependency-injector>=4.41",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]
