[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-loop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
where = [".."]          # look one level up (projects/) for packages
include = ["ralph_loop", "ralph_loop.*"]
