[project]
name = "spec_driven"
version = "0.2.0"
description = "spec_driven webapp (localhost-only viewer/editor for spec-driven artifacts)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "httpx>=0.27",
    "pytest>=8.0",
    "dependency-injector>=4.41",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]
