[project]
name = "spec_driven_backend"
version = "0.1.0"
description = "Localhost FastAPI backend for the spec_driven viewer/editor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
