[project]
name = "spec_driven_backend"
version = "0.1.0"
description = "spec_driven webapp backend (localhost-only viewer/editor for spec-driven artifacts)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*"]
